RESOLVED FIXED172457
ASSERTION FAILED: m_boundThread == currentThread() in WTF::WeakReference<WebCore::WebCoreDecompressionSession>::clear()
https://bugs.webkit.org/show_bug.cgi?id=172457
Summary ASSERTION FAILED: m_boundThread == currentThread() in WTF::WeakReference<WebC...
Ryan Haddad
Reported 2017-05-22 10:53:50 PDT
ASSERTION FAILED: m_boundThread == currentThread() /Volumes/Data/slave/elcapitan-debug/build/WebKitBuild/Debug/usr/local/include/wtf/WeakPtr.h(65) : void WTF::WeakReference<WebCore::WebCoreDecompressionSession>::clear() [T = WebCore::WebCoreDecompressionSession] 1 0x1153ba500 WTFCrash 2 0x109be2592 WTF::WeakReference<WebCore::WebCoreDecompressionSession>::clear() 3 0x109be24aa WTF::WeakPtrFactory<WebCore::WebCoreDecompressionSession>::~WeakPtrFactory() 4 0x109be23b5 WTF::WeakPtrFactory<WebCore::WebCoreDecompressionSession>::~WeakPtrFactory() 5 0x109be22e5 WebCore::WebCoreDecompressionSession::~WebCoreDecompressionSession() 6 0x109be22b5 WebCore::WebCoreDecompressionSession::~WebCoreDecompressionSession() 7 0x109be2289 WTF::ThreadSafeRefCounted<WebCore::WebCoreDecompressionSession>::deref() const 8 0x109be4be4 void WTF::derefIfNotNull<WebCore::WebCoreDecompressionSession>(WebCore::WebCoreDecompressionSession*) 9 0x109be4ba3 WTF::RefPtr<WebCore::WebCoreDecompressionSession>::~RefPtr() 10 0x109bdfb35 WTF::RefPtr<WebCore::WebCoreDecompressionSession>::~RefPtr() 11 0x10a7b81be WebCore::WebCoreDecompressionSession::enqueueSample(opaqueCMSampleBuffer*, bool)::$_2::~$_2() 12 0x10a7b5035 WebCore::WebCoreDecompressionSession::enqueueSample(opaqueCMSampleBuffer*, bool)::$_2::~$_2() 13 0x10a7b500c __destroy_helper_block_11 14 0x7fff9e6ee6b1 _Block_release 15 0x7fff9a17d40b _dispatch_client_callout 16 0x7fff9a18203b _dispatch_queue_drain 17 0x7fff9a188707 _dispatch_queue_invoke 18 0x7fff9a17d40b _dispatch_client_callout 19 0x7fff9a18129b _dispatch_root_queue_drain 20 0x7fff9a180b00 _dispatch_worker_thread3 21 0x7fff9e6544de _pthread_wqthread 22 0x7fff9e652341 start_wqthread https://build.webkit.org/results/Apple%20El%20Capitan%20Debug%20WK2%20(Tests)/r217217%20(1271)/results.html
Attachments
Crash log (86.30 KB, text/plain)
2017-05-22 10:54 PDT, Ryan Haddad
no flags
Patch (3.48 KB, patch)
2017-05-22 11:17 PDT, Jer Noble
no flags
Ryan Haddad
Comment 1 2017-05-22 10:54:25 PDT
Created attachment 310892 [details] Crash log
Radar WebKit Bug Importer
Comment 2 2017-05-22 10:55:09 PDT
Ryan Haddad
Comment 3 2017-05-22 10:59:20 PDT
This has been seen with the following LayoutTests: imported/w3c/web-platform-tests/media-source/mediasource-buffered.html imported/w3c/web-platform-tests/media-source/mediasource-closed.html imported/w3c/web-platform-tests/media-source/mediasource-attach-stops-delaying-load-event.html
Jer Noble
Comment 4 2017-05-22 11:17:07 PDT
WebKit Commit Bot
Comment 5 2017-05-22 12:02:15 PDT
Comment on attachment 310894 [details] Patch Clearing flags on attachment: 310894 Committed r217234: <http://trac.webkit.org/changeset/217234>
WebKit Commit Bot
Comment 6 2017-05-22 12:02:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.