ASSERTION FAILED: m_boundThread == currentThread() in WTF::WeakReference<WebCore::WebCoreDecompressionSession>::clear() https://bugs.webkit.org/show_bug.cgi?id=172457 <rdar://problem/32329436>

Reviewed by Eric Carlson.

Remove vestigal WeakPtrFactory that was entirely unused.

* platform/graphics/cocoa/WebCoreDecompressionSession.h:
(WebCore::WebCoreDecompressionSession::createWeakPtr): Deleted.
* platform/graphics/cocoa/WebCoreDecompressionSession.mm:
(WebCore::WebCoreDecompressionSession::WebCoreDecompressionSession):


Canonical link: https://commits.webkit.org/189359@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217234 268f45cc-cd09-0410-ab3c-d52691b4dbfc