Source/WebCore/platform/graphics/cocoa/WebCoreDecompressionSession.mm
@@ -48,9 +48,7 @@ WebCoreDecompressionSession::WebCoreDecompressionSession()
     : m_decompressionQueue(adoptOSObject(dispatch_queue_create("WebCoreDecompressionSession Decompression Queue", DISPATCH_QUEUE_SERIAL)))
     , m_enqueingQueue(adoptOSObject(dispatch_queue_create("WebCoreDecompressionSession Enqueueing Queue", DISPATCH_QUEUE_SERIAL)))
     , m_hasAvailableImageSemaphore(adoptOSObject(dispatch_semaphore_create(0)))
-    , m_weakFactory(this)
 {
-    auto weakThis = createWeakPtr();
 }
 
 void WebCoreDecompressionSession::invalidate()
